--- a/scripts/arm_excitation/package.xml
+++ b/scripts/arm_excitation/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>finger_temperature_sensing</name>
+  <name>arm_excitation</name>
   <version>0.0.0</version>
-  <description>The finger_temperature_sensing package</description>
+  <description>The excitation package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="benoitauclair30@gmail.com">pal</maintainer>
+  <maintainer email="rogelio@todo.todo">rogelio</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/finger_temperature_sensing</url> -->
+  <!-- <url type="website">http://wiki.ros.org/arm_excitation</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -49,18 +49,23 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>control_msgs</build_depend>
-  <build_depend>reemc_controller_configuration</build_depend>
-  <build_depend>reemc_gazebo</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
-  <build_export_depend>control_msgs</build_export_depend>
-  <build_export_depend>reemc_controller_configuration</build_export_depend>
-  <build_export_depend>reemc_gazebo</build_export_depend>
+  <build_depend>sensor_msgs</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <build_depend>control_msgs</build_depend>
+  <build_export_depend>geometry_msgs</build_export_depend>
+  <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
-  <exec_depend>control_msgs</exec_depend>
-  <exec_depend>reemc_controller_configuration</exec_depend>
-  <exec_depend>reemc_gazebo</exec_depend>
+  <build_export_depend>sensor_msgs</build_export_depend>
+  <build_export_depend>std_msgs</build_export_depend>
+  <exec_depend>control_msgs</exec_depend>  
+  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
